fix: update timetable abbreviations and room assignments in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -227,8 +227,8 @@
         <!-- 08:00 AM -->
         <tr>
           <td class="time-col">08:00 AM</td>
-          <td><span class="abbr">MG</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">PR</span><span class="room">E125</span></td>
+          <td><span class="abbr">MTES</span><span class="room">E311</span></td>
+          <td rowspan="2"><span class="abbr">PRPWA</span><span class="room">E125</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -239,7 +239,7 @@
         <!-- 09:00 AM -->
         <tr>
           <td class="time-col">09:00 AM</td>
-          <td><span class="abbr">SE</span><span class="room">E311</span></td>
+          <td><span class="abbr">SEA</span><span class="room">E311</span></td>
           <td rowspan="2"><span class="abbr">DM</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
@@ -250,7 +250,7 @@
         <!-- 10:00 AM -->
         <tr>
           <td class="time-col">10:00 AM</td>
-          <td><span class="abbr">DL</span><span class="room">E311</span></td>
+          <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
           <td><span class="abbr">LLM</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
@@ -261,9 +261,9 @@
         <!-- 11:00 AM -->
         <tr>
           <td class="time-col">11:00 AM</td>
-          <td rowspan="2"><span class="abbr">PR</span><span class="room">E125</span></td>
-          <td><span class="abbr">MG</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">PR</span><span class="room">E125</span></td>
+          <td rowspan="2"><span class="abbr">PRPWA</span><span class="room">E125</span></td>
+          <td><span class="abbr">MTES</span><span class="room">E311</span></td>
+          <td rowspan="2"><span class="abbr">PRPWA</span><span class="room">E125</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -273,7 +273,7 @@
         <!-- 12:00 PM -->
         <tr>
           <td class="time-col">12:00 PM</td>
-          <td><span class="abbr">SE</span><span class="room">E311</span></td>
+          <td><span class="abbr">SEA</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -294,7 +294,7 @@
           <td></td>
           <td rowspan="2"><span class="abbr">LLM</span><span class="room">E311</span></td>
           <td rowspan="2"><span class="abbr">DM</span><span class="room">E311</span></td>
-          <td><span class="abbr">MG</span><span class="room">E311</span></td>
+          <td><span class="abbr">MTES</span><span class="room">E311</span></td>
           <td></td>
         </tr>
 
@@ -314,9 +314,9 @@
           <td></td>
           <td></td>
           <td></td>
-          <td><span class="abbr">MG</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">DL</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">SE</span><span class="room">E311</span></td>
+          <td><span class="abbr">MTES</span><span class="room">E311</span></td>
+          <td rowspan="2"><span class="abbr">DLUP</span><span class="room">E311</span></td>
+          <td rowspan="2"><span class="abbr">SEA</span><span class="room">E311</span></td>
           <td></td>
         </tr>
 
@@ -326,7 +326,7 @@
           <td></td>
           <td></td>
           <td></td>
-          <td><span class="abbr">DL</span><span class="room">E311</span></td>
+          <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -360,19 +360,19 @@
     </thead>
     <tbody>
       <tr>
-        <td><strong>PR</strong></td>
+        <td><strong>PRPWA</strong></td>
         <td>Practical Robotics Projects with Arduino</td>
         <td>CSE4571</td>
         <td>Suprava R. Laha</td>
       </tr>
       <tr>
-        <td><strong>SE</strong></td>
+        <td><strong>SEA</strong></td>
         <td>Software Engineering Approach</td>
         <td>CSE4658</td>
         <td>Rashmi Maheshwari</td>
       </tr>
       <tr>
-        <td><strong>DL</strong></td>
+        <td><strong>DLUP</strong></td>
         <td>Deep Learning using Python</td>
         <td>CSE4685</td>
         <td>Avinash Potluri</td>
@@ -390,7 +390,7 @@
         <td>RUBY</td>
       </tr>
       <tr>
-        <td><strong>MG</strong></td>
+        <td><strong>MTES</strong></td>
         <td>Management Topics in Environmental Studies</td>
         <td>CHM2049</td>
         <td>Sulochana Singh</td>
