fix: update timetable abbreviations from DM to DMPA in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
         <tr>
           <td class="time-col">09:00 AM</td>
           <td><span class="abbr">SEA</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">DM</span><span class="room">E311</span></td>
+          <td rowspan="2"><span class="abbr">DMPA</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -293,7 +293,7 @@
           <td></td>
           <td></td>
           <td rowspan="2"><span class="abbr">LLM</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">DM</span><span class="room">E311</span></td>
+          <td rowspan="2"><span class="abbr">DMPA</span><span class="room">E311</span></td>
           <td><span class="abbr">MTES</span><span class="room">E311</span></td>
           <td></td>
         </tr>
@@ -327,8 +327,6 @@
           <td></td>
           <td></td>
           <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
-          <td></td>
-          <td></td>
           <td></td>
         </tr>
 
@@ -378,7 +376,7 @@
         <td>Avinash Potluri</td>
       </tr>
       <tr>
-        <td><strong>DM</strong></td>
+        <td><strong>DMPA</strong></td>
         <td>Data Mining & Predictive Analytics</td>
         <td>CSE4859</td>
         <td>Rina Mahakud</td>
