fix: update instructor name for Management Topics in Environmental Studies

--- a/public/index.html
+++ b/public/index.html
@@ -391,7 +391,7 @@
         <td><strong>MTES</strong></td>
         <td>Management Topics in Environmental Studies</td>
         <td>CHM2049</td>
-        <td>Sulochana Singh</td>
+        <td>Sulochana Singh / Nimai Ch. Nayak</td>
       </tr>
     </tbody>
   </table>
