fix: update title in index.html to reflect correct section

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sec-44 Timetable</title>
+  <title>241044</title>
 
   <!-- Firebase SDKs (copied from your snippet) -->
   <script defer src="/__/firebase/12.2.1/firebase-app-compat.js"></script>
