--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@
         <tr>
           <td class="time-col">09:00 AM</td>
           <td><span class="abbr">SEA</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">DMPA</span><span class="room">E311</span></td>
+          <td><span class="abbr">DMPA</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -277,6 +277,7 @@
           <td class="time-col">10:00 AM</td>
           <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
           <td><span class="abbr">LLM</span><span class="room">E311</span></td>
+          <td><span class="abbr">DMPA</span><span class="room">E311</span></td>
           <td></td>
           <td></td>
           <td></td>
@@ -317,8 +318,8 @@
           <td></td>
           <td></td>
           <td></td>
-          <td rowspan="2"><span class="abbr">LLM</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">DMPA</span><span class="room">E311</span></td>
+          <td><span class="abbr">LLM</span><span class="room">E311</span></td>
+          <td><span class="abbr">DMPA</span><span class="room">E311</span></td>
           <td><span class="abbr">MTES</span><span class="room">E311</span></td>
           <td></td>
         </tr>
@@ -330,6 +331,8 @@
           <td></td>
           <td></td>
           <td><span class="abbr">LLM</span><span class="room">E311</span></td>
+          <td><span class="abbr">DMPA</span><span class="room">E311</span></td>
+          <td><span class="abbr">LLM</span><span class="room">E311</span></td>
           <td></td>
         </tr>
 
@@ -340,8 +343,8 @@
           <td></td>
           <td></td>
           <td><span class="abbr">MTES</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">DLUP</span><span class="room">E311</span></td>
-          <td rowspan="2"><span class="abbr">SEA</span><span class="room">E311</span></td>
+          <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
+          <td><span class="abbr">SEA</span><span class="room">E311</span></td>
           <td></td>
         </tr>
 
@@ -352,6 +355,8 @@
           <td></td>
           <td></td>
           <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
+          <td><span class="abbr">DLUP</span><span class="room">E311</span></td>
+          <td><span class="abbr">SEA</span><span class="room">E311</span></td>
           <td></td>
         </tr>
 
