fix: update repoToken for Firebase Hosting deployment

--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,23 @@
       --border: #2f2f2f;
       --highlight: #fff3bf;
       --accent: #0b69a3;
+      --alt-row: #f2f6fa;
+      --alt-row-dark: #181b1e;
+      --thead-shade: #e9ecef;
+      --thead-shade-dark: #23272b;
+      --fixed-col-shade: #e3eaf3;
+      --fixed-col-shade-dark: #23272b;
     }
 
     body.dark {
       --bg: #0f1113;
       --text: #e6eef6;
       --muted: #111316;
-      --border: #999999;
+      --border: #767676;
       --highlight: #5a4300;
+      --alt-row: var(--alt-row-dark);
+      --thead-shade: var(--thead-shade-dark);
+      --fixed-col-shade: var(--fixed-col-shade-dark);
     }
 
     body {
@@ -74,9 +83,6 @@
 
     .wrap {
       overflow: auto;
-      border-radius: 8px;
-      border: 1px solid var(--border);
-      padding: 6px;
       background: var(--bg);
       -webkit-overflow-scrolling: touch;
     }
@@ -92,7 +98,7 @@
     }
 
     thead th {
-      background: var(--muted);
+      background: var(--thead-shade);
       padding: 10px;
       border: 2px solid var(--border);
       text-align: left;
@@ -104,26 +110,20 @@
       position: sticky;
       left: 0;
       z-index: 100;
-      /* keep above other cells */
-      background-color: var(--bg) !important;
-      /* solid background for light/dark */
+      background-color: var(--fixed-col-shade) !important;
       border-right: 2px solid var(--border);
-      /* visible border */
       min-width: 92px;
       width: 92px;
       text-align: center;
       font-weight: 700;
       padding: 10px;
       box-shadow: 4px 0 8px -4px rgba(0, 0, 0, 0.06);
-      /* subtle shadow for separation */
       background-clip: padding-box;
-      /* prevents border bleed */
       transform: translateZ(0);
-      /* avoids flicker in some browsers */
     }
 
-    /* header time cell slightly higher stacking */
     thead th.time-col {
+      background: var(--fixed-col-shade) !important;
       z-index: 110;
     }
 
@@ -150,7 +150,11 @@
     }
 
     tbody tr:nth-child(even) td {
-      background: rgba(0, 0, 0, 0.02);
+      background: var(--alt-row);
+    }
+
+    tbody tr td.time-col {
+      background-color: var(--fixed-col-shade) !important;
     }
 
     @media screen {
@@ -179,10 +183,10 @@
         position: static;
         box-shadow: none !important;
         border-right: 2px solid var(--border) !important;
+        background-color: var(--fixed-col-shade) !important;
       }
     }
 
-    /* stronger shadow only while scrolling */
     .wrap.scrolling th.time-col,
     .wrap.scrolling td.time-col {
       box-shadow: 6px 0 10px -4px rgba(0, 0, 0, 0.15);
@@ -204,8 +208,12 @@
     }
 
     .legend thead th {
-      background: var(--muted);
+      background: var(--thead-shade);
       font-weight: 700;
+    }
+
+    .legend tbody tr:nth-child(even) td {
+      background: var(--alt-row);
     }
 
     @media (max-width:760px) {
@@ -226,12 +234,8 @@
   <div class="controls no-print">
     <button id="darkToggle">Enable Dark Mode</button>
 
-    <!-- Firebase status element (keeps the firebase snippet behaviour but integrated) -->
     <div id="firebase-status" class="firebase-status" aria-live="polite">Firebase: loading…</div>
 
-    <div style="font-size:13px; opacity:0.9;">
-      (Highlight shows <strong>today</strong> in browser only; disabled when printing)
-    </div>
   </div>
 
   <div class="wrap">
@@ -360,7 +364,7 @@
           <td></td>
         </tr>
 
-        <!-- 06:00 PM (blank row requested) -->
+        <!-- 06:00 PM -->
         <tr>
           <td class="time-col">06:00 PM</td>
           <td></td>
@@ -552,7 +556,7 @@
       function applyDark(isDark) {
         document.body.classList.toggle('dark', !!isDark);
         toggle.setAttribute('aria-pressed', !!isDark);
-        toggle.textContent = !!isDark ? 'Disable Dark Mode' : 'Enable Dark Mode';
+        toggle.textContent = !!isDark ? 'Light Mode' : 'Dark Mode';
       }
 
       const stored = localStorage.getItem('tt-dark');
